<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/colorPrimaryDark"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Are you sure ?"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="18dp"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"
            android:layout_centerInParent="true"
            />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/abuse_choose"
            android:layout_marginLeft="15dp"
            android:textAlignment="center"
            android:textColor="@android:color/darker_gray"
            />
        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            >
            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/abuse1"
                android:textColor="@android:color/white"
                android:buttonTint="@android:color/white"
                />
            <RadioButton
                android:layout_marginTop="5dp"
                android:id="@+id/radio2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/abuse2"
                android:textColor="@android:color/white"
                android:buttonTint="@android:color/white"
                />
            <RadioButton
                android:layout_marginTop="5dp"
                android:id="@+id/radio3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/abuse3"
                android:textColor="@android:color/white"
                android:buttonTint="@android:color/white"
                />
            <RadioButton
                android:layout_marginTop="5dp"
                android:id="@+id/radio4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/abuse4"
                android:textColor="@android:color/white"
                android:buttonTint="@android:color/white"
                />
            <RadioButton
                android:layout_marginTop="5dp"
                android:id="@+id/radio5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/abuse5"
                android:textColor="@android:color/white"
                android:buttonTint="@android:color/white"
                />
            <RadioButton
                android:layout_marginTop="5dp"
                android:id="@+id/radio6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/abuse6"
                android:textColor="@android:color/white"
                android:buttonTint="@android:color/white"
                />
            <RadioButton
                android:layout_marginTop="5dp"
                android:id="@+id/radio7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/abuse7"
                android:textColor="@android:color/white"
                android:buttonTint="@android:color/white"
                />
            <RadioButton
                android:layout_marginTop="5dp"
                android:id="@+id/radio8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/abuse8"
                android:textColor="@android:color/white"
                android:buttonTint="@android:color/white"
                />
            <RadioButton
                android:layout_marginTop="5dp"
                android:id="@+id/radio9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/abuse9"
                android:textColor="@android:color/white"
                android:buttonTint="@android:color/white"
                />
        </RadioGroup>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="40dp">
            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:background="@color/colorButton"
                android:text="Calcel"
                android:textColor="@android:color/white"
                android:textAllCaps="false"
                android:textSize="16dp"
                />
            <Button
                android:id="@+id/btn_ok"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:background="@color/colorButton"
                android:text="Ok"
                android:textColor="@android:color/white"
                android:textAllCaps="false"
                android:textSize="16dp"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>